slanglabs_nlu/entity_extraction/generated/DateParser.py
# Generated from ../grammars/Date.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DateParser ( Parser ):

    grammarFileName = "Date.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "' '", "'of'", "'at'", "'month'", "'o clock'", 
                     "'am'", "'pm'", "'noon'", "'afternoon'", "'morning'", 
                     "'evening'", "'night'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NEXT_DAY", "PREV_DAY", "CURR_DAY", "NEXT2_DAY", 
                      "PREV2_DAY", "RELATIVE_DAY", "RELATIVE_DAY_NEXT", 
                      "RELATIVE_DAY_PREV", "DOTW", "NEXT_WEEK", "PREV_WEEK", 
                      "CURR_WEEK", "RELATIVE_WEEK", "RELATIVE_WEEK_NEXT", 
                      "RELATIVE_WEEK_PREV", "NEXT_WEEKEND", "PREV_WEEKEND", 
                      "NEXT_MONTH", "PREV_MONTH", "CURR_MONTH", "MOTY", 
                      "RELATIVE_MONTH", "RELATIVE_MONTH_NEXT", "RELATIVE_MONTH_PREV", 
                      "NEXT_YEAR", "PREV_YEAR", "CURR_YEAR", "LITERAL_YEAR", 
                      "RELATIVE_YEAR", "RELATIVE_YEAR_NEXT", "RELATIVE_YEAR_PREV", 
                      "RELATIVE_NEXT", "RELATIVE_PREV", "RELATIVE_PREFIX", 
                      "NEXT", "PREV", "ART", "CONJUNCTION", "AM", "PM", 
                      "NOON", "ORDINAL", "ORDINALSTR", "WHITESPACE", "PUNCT", 
                      "DATE_NUMBER", "NUMBER", "WORD", "TIME", "TIME_RANGE" ]

    RULE_utterance = 0
    RULE_date_pattern = 1
    RULE_literal_form = 2
    RULE_relative_form = 3
    RULE_year_form = 4
    RULE_year = 5
    RULE_relative_year = 6
    RULE_month_form = 7
    RULE_month = 8
    RULE_relative_month = 9
    RULE_literal_month = 10
    RULE_double_ordinal_month = 11
    RULE_week_form = 12
    RULE_week = 13
    RULE_relative_week = 14
    RULE_day_form = 15
    RULE_day = 16
    RULE_relative_day = 17
    RULE_time = 18
    RULE_tod = 19
    RULE_prefix = 20
    RULE_suffix = 21

    ruleNames =  [ "utterance", "date_pattern", "literal_form", "relative_form", 
                   "year_form", "year", "relative_year", "month_form", "month", 
                   "relative_month", "literal_month", "double_ordinal_month", 
                   "week_form", "week", "relative_week", "day_form", "day", 
                   "relative_day", "time", "tod", "prefix", "suffix" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    NEXT_DAY=13
    PREV_DAY=14
    CURR_DAY=15
    NEXT2_DAY=16
    PREV2_DAY=17
    RELATIVE_DAY=18
    RELATIVE_DAY_NEXT=19
    RELATIVE_DAY_PREV=20
    DOTW=21
    NEXT_WEEK=22
    PREV_WEEK=23
    CURR_WEEK=24
    RELATIVE_WEEK=25
    RELATIVE_WEEK_NEXT=26
    RELATIVE_WEEK_PREV=27
    NEXT_WEEKEND=28
    PREV_WEEKEND=29
    NEXT_MONTH=30
    PREV_MONTH=31
    CURR_MONTH=32
    MOTY=33
    RELATIVE_MONTH=34
    RELATIVE_MONTH_NEXT=35
    RELATIVE_MONTH_PREV=36
    NEXT_YEAR=37
    PREV_YEAR=38
    CURR_YEAR=39
    LITERAL_YEAR=40
    RELATIVE_YEAR=41
    RELATIVE_YEAR_NEXT=42
    RELATIVE_YEAR_PREV=43
    RELATIVE_NEXT=44
    RELATIVE_PREV=45
    RELATIVE_PREFIX=46
    NEXT=47
    PREV=48
    ART=49
    CONJUNCTION=50
    AM=51
    PM=52
    NOON=53
    ORDINAL=54
    ORDINALSTR=55
    WHITESPACE=56
    PUNCT=57
    DATE_NUMBER=58
    NUMBER=59
    WORD=60
    TIME=61
    TIME_RANGE=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class UtteranceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prefix(self):
            return self.getTypedRuleContext(DateParser.PrefixContext,0)


        def date_pattern(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DateParser.Date_patternContext)
            else:
                return self.getTypedRuleContext(DateParser.Date_patternContext,i)


        def suffix(self):
            return self.getTypedRuleContext(DateParser.SuffixContext,0)


        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(DateParser.WORD)
            else:
                return self.getToken(DateParser.WORD, i)

        def getRuleIndex(self):
            return DateParser.RULE_utterance

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUtterance" ):
                listener.enterUtterance(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUtterance" ):
                listener.exitUtterance(self)




    def utterance(self):

        localctx = DateParser.UtteranceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_utterance)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 44
                self.prefix()


            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 47
                self.date_pattern()


            self.state = 65
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 59
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 51
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if _la==DateParser.T__0:
                                self.state = 50
                                self.match(DateParser.T__0)


                            self.state = 53
                            self.match(DateParser.WORD)
                            self.state = 55
                            self._errHandler.sync(self)
                            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                            if la_ == 1:
                                self.state = 54
                                self.match(DateParser.T__0)

                     
                        self.state = 61
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                    self.state = 62
                    self.date_pattern() 
                self.state = 67
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 68
                self.suffix()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Date_patternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relative_form(self):
            return self.getTypedRuleContext(DateParser.Relative_formContext,0)


        def year_form(self):
            return self.getTypedRuleContext(DateParser.Year_formContext,0)


        def month_form(self):
            return self.getTypedRuleContext(DateParser.Month_formContext,0)


        def week_form(self):
            return self.getTypedRuleContext(DateParser.Week_formContext,0)


        def day_form(self):
            return self.getTypedRuleContext(DateParser.Day_formContext,0)


        def literal_form(self):
            return self.getTypedRuleContext(DateParser.Literal_formContext,0)


        def getRuleIndex(self):
            return DateParser.RULE_date_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDate_pattern" ):
                listener.enterDate_pattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDate_pattern" ):
                listener.exitDate_pattern(self)




    def date_pattern(self):

        localctx = DateParser.Date_patternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_date_pattern)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.relative_form()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.year_form()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.month_form()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.week_form()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 75
                self.day_form()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 76
                self.literal_form()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Literal_formContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATE_NUMBER(self):
            return self.getToken(DateParser.DATE_NUMBER, 0)

        def getRuleIndex(self):
            return DateParser.RULE_literal_form

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral_form" ):
                listener.enterLiteral_form(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral_form" ):
                listener.exitLiteral_form(self)




    def literal_form(self):

        localctx = DateParser.Literal_formContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_literal_form)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(DateParser.DATE_NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Relative_formContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relative_year(self):
            return self.getTypedRuleContext(DateParser.Relative_yearContext,0)


        def relative_month(self):
            return self.getTypedRuleContext(DateParser.Relative_monthContext,0)


        def relative_week(self):
            return self.getTypedRuleContext(DateParser.Relative_weekContext,0)


        def relative_day(self):
            return self.getTypedRuleContext(DateParser.Relative_dayContext,0)


        def getRuleIndex(self):
            return DateParser.RULE_relative_form

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelative_form" ):
                listener.enterRelative_form(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelative_form" ):
                listener.exitRelative_form(self)




    def relative_form(self):

        localctx = DateParser.Relative_formContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_relative_form)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.relative_year()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.relative_month()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.relative_week()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.relative_day()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Year_formContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def month_form(self):
            return self.getTypedRuleContext(DateParser.Month_formContext,0)


        def year(self):
            return self.getTypedRuleContext(DateParser.YearContext,0)


        def time(self):
            return self.getTypedRuleContext(DateParser.TimeContext,0)


        def MOTY(self):
            return self.getToken(DateParser.MOTY, 0)

        def ORDINAL(self):
            return self.getToken(DateParser.ORDINAL, 0)

        def ORDINALSTR(self):
            return self.getToken(DateParser.ORDINALSTR, 0)

        def getRuleIndex(self):
            return DateParser.RULE_year_form

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYear_form" ):
                listener.enterYear_form(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYear_form" ):
                listener.exitYear_form(self)




    def year_form(self):

        localctx = DateParser.Year_formContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_year_form)
        self._la = 0 # Token type
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.month_form()
                self.state = 88
                self.year()
                self.state = 90
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 89
                    self.time()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.year()
                self.state = 93
                self.month_form()
                self.state = 95
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 94
                    self.time()


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                _la = self._input.LA(1)
                if not(_la==DateParser.ORDINAL or _la==DateParser.ORDINALSTR):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 98
                self.match(DateParser.MOTY)
                self.state = 99
                self.year()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.year()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YearContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEXT_YEAR(self):
            return self.getToken(DateParser.NEXT_YEAR, 0)

        def PREV_YEAR(self):
            return self.getToken(DateParser.PREV_YEAR, 0)

        def CURR_YEAR(self):
            return self.getToken(DateParser.CURR_YEAR, 0)

        def LITERAL_YEAR(self):
            return self.getToken(DateParser.LITERAL_YEAR, 0)

        def getRuleIndex(self):
            return DateParser.RULE_year

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYear" ):
                listener.enterYear(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYear" ):
                listener.exitYear(self)




    def year(self):

        localctx = DateParser.YearContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_year)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DateParser.NEXT_YEAR) | (1 << DateParser.PREV_YEAR) | (1 << DateParser.CURR_YEAR) | (1 << DateParser.LITERAL_YEAR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Relative_yearContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RELATIVE_YEAR(self):
            return self.getToken(DateParser.RELATIVE_YEAR, 0)

        def RELATIVE_PREFIX(self):
            return self.getToken(DateParser.RELATIVE_PREFIX, 0)

        def ART(self):
            return self.getToken(DateParser.ART, 0)

        def NUMBER(self):
            return self.getToken(DateParser.NUMBER, 0)

        def RELATIVE_YEAR_NEXT(self):
            return self.getToken(DateParser.RELATIVE_YEAR_NEXT, 0)

        def RELATIVE_YEAR_PREV(self):
            return self.getToken(DateParser.RELATIVE_YEAR_PREV, 0)

        def day(self):
            return self.getTypedRuleContext(DateParser.DayContext,0)


        def week(self):
            return self.getTypedRuleContext(DateParser.WeekContext,0)


        def month(self):
            return self.getTypedRuleContext(DateParser.MonthContext,0)


        def getRuleIndex(self):
            return DateParser.RULE_relative_year

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelative_year" ):
                listener.enterRelative_year(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelative_year" ):
                listener.exitRelative_year(self)




    def relative_year(self):

        localctx = DateParser.Relative_yearContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_relative_year)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DateParser.RELATIVE_PREFIX:
                self.state = 105
                self.match(DateParser.RELATIVE_PREFIX)


            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DateParser.ART:
                self.state = 108
                self.match(DateParser.ART)


            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DateParser.NUMBER:
                self.state = 111
                self.match(DateParser.NUMBER)


            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DateParser.RELATIVE_YEAR]:
                self.state = 114
                self.match(DateParser.RELATIVE_YEAR)
                pass
            elif token in [DateParser.RELATIVE_YEAR_NEXT, DateParser.RELATIVE_YEAR_PREV]:
                self.state = 115
                _la = self._input.LA(1)
                if not(_la==DateParser.RELATIVE_YEAR_NEXT or _la==DateParser.RELATIVE_YEAR_PREV):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 119
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                if la_ == 1:
                    self.state = 116
                    self.day()

                elif la_ == 2:
                    self.state = 117
                    self.week()

                elif la_ == 3:
                    self.state = 118
                    self.month()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Month_formContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(DateParser.NUMBER, 0)

        def ORDINAL(self):
            return self.getToken(DateParser.ORDINAL, 0)

        def ORDINALSTR(self):
            return self.getToken(DateParser.ORDINALSTR, 0)

        def month(self):
            return self.getTypedRuleContext(DateParser.MonthContext,0)


        def MOTY(self):
            return self.getToken(DateParser.MOTY, 0)

        def ART(self):
            return self.getToken(DateParser.ART, 0)

        def time(self):
            return self.getTypedRuleContext(DateParser.TimeContext,0)


        def day(self):
            return self.getTypedRuleContext(DateParser.DayContext,0)


        def double_ordinal_month(self):
            return self.getTypedRuleContext(DateParser.Double_ordinal_monthContext,0)


        def literal_month(self):
            return self.getTypedRuleContext(DateParser.Literal_monthContext,0)


        def getRuleIndex(self):
            return DateParser.RULE_month_form

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMonth_form" ):
                listener.enterMonth_form(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMonth_form" ):
                listener.exitMonth_form(self)




    def month_form(self):

        localctx = DateParser.Month_formContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_month_form)
        self._la = 0 # Token type
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,29,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DateParser.ART:
                    self.state = 123
                    self.match(DateParser.ART)


                self.state = 126
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DateParser.ORDINAL) | (1 << DateParser.ORDINALSTR) | (1 << DateParser.NUMBER))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DateParser.T__1:
                    self.state = 127
                    self.match(DateParser.T__1)


                self.state = 132
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [DateParser.NEXT_MONTH, DateParser.PREV_MONTH, DateParser.CURR_MONTH]:
                    self.state = 130
                    self.month()
                    pass
                elif token in [DateParser.MOTY]:
                    self.state = 131
                    self.match(DateParser.MOTY)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DateParser.T__2:
                    self.state = 134
                    self.match(DateParser.T__2)


                self.state = 138
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
                if la_ == 1:
                    self.state = 137
                    self.time()


                pass
